crates/monosecret/tests/snapshots/cli_snapshots__check_all_present.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - check
    - "--no-prompt"
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-snapshots-check-all-present
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Checking secrets in demo (profile: default)...

✓ API_TOKEN - API token
✓ DATABASE_URL - Database URL

Summary: 2 found, 0 missing
