crates/monosecret/tests/snapshots/cli_snapshots__get_secret_with_default.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
info:
  program: monosecret
  args:
    - "--reason"
    - test
    - get
    - DATABASE_URL
    - "--provider"
    - local
---
success: true
exit_code: 0
----- stdout -----
postgres://localhost/dev

----- stderr -----
