crates/monosecret/tests/snapshots/cli_snapshots__help_output.snap
---
source: crates/monosecret/tests/cli_snapshots.rs
assertion_line: 45
info:
  program: monosecret
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Declarative secrets, every environment, any provider - https://ifiokjr.github.io/monosecret

Usage: monosecret [OPTIONS] <COMMAND>

Commands:
  init      Initialize a new monosecret.toml (optionally, from a provider)
  set       Set a secret value
  get       Get a secret value
  run       Run a command with secrets injected
  manifest  Emit a secret-value-free manifest for SDK code generation
  check     Check if all required secrets are in the provider, if not set them
  schema    Emit JSON Schema for the union or one profile's typed shape
  config    Init or show ~/.config/monosecret/config.toml
  import    Import secrets from a provider to another provider
  audit     Show the local audit log of secret access
  env       Load resolved secrets into the surrounding shell or a CI environment
  help      Print this message or the help of the given subcommand(s)

Options:
  -f, --file <FILE>      Path to monosecret.toml (default: auto-detect by walking up from current directory) [env: MONOSECRET_FILE=]
  -v, --verbose...       Increase diagnostic logging (-v/--verbose for debug, -vv/--verbose --verbose for trace). Can also use `RUST_LOG=debug/trace`
      --reason <REASON>  Reason for accessing secrets. Env: `MONOSECRET_REASON` (legacy: `SECRETSPEC_REASON`) [env: MONOSECRET_REASON=]
  -h, --help             Print help
  -V, --version          Print version

----- stderr -----
